--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Đàn Piano 72 phím (bắt đầu từ C0, tải MIDI)</title>
+  <title>Đàn Piano 72 phím (bắt đầu từ C0, có kéo bàn phím)</title>
   <style>
     body { font-family: Arial, sans-serif; background: linear-gradient(135deg,#667eea 0%,#764ba2 100%); margin:0; padding:0; min-height:100vh; }
     .container { width:100%; max-width:1600px; margin:auto; position:relative; padding:28px 0 14px;}
@@ -37,8 +37,20 @@
     #alert { text-align: center; color: #f44336; background: #fff2f2; border-radius: 7px; font-size: 14px; font-weight:bold;
       margin: 11px auto 0 auto; max-width: 320px; padding: 8px 11px; display: none; box-shadow: 0 2px 10px rgba(0,0,0,0.08); border: 1px solid #ffd9d9;
     }
-    .piano-container { background: rgba(0,0,0,0.27); backdrop-filter: blur(8px); border-radius: 10px; padding: 10px; box-shadow: 0 9px 28px rgba(0,0,0,0.39); max-width: 1540px; margin: auto; }
-    .piano { position: relative; height: 180px; width: 2376px; margin: 0 auto;}
+    .piano-container {
+      background: rgba(0,0,0,0.27);
+      backdrop-filter: blur(8px); 
+      border-radius: 10px; padding: 10px; box-shadow: 0 9px 28px rgba(0,0,0,0.39);
+      max-width: 1540px; margin: auto;
+      overflow-x: auto; max-height: 210px;
+      /* Thanh cuộn nổi bật hơn */
+      scrollbar-width: thin; scrollbar-color: #667eea #ddd;
+    }
+    .piano {
+      position: relative; height: 180px; min-width: 2376px; margin: 0 auto;
+      /* Cho phép drag-scroll bằng chuột (desktop) và chạm/kéo (mobile) */
+      user-select: none; cursor: grab;
+    }
     .white-key { position: absolute; width: 33px; height: 180px; background: linear-gradient(to bottom, #fff 0%, #ececec 100%);
       border: 2px solid #222; border-radius: 0 0 6px 6px; cursor: pointer; user-select: none;
       display: flex; align-items: flex-end; justify-content: center; padding-bottom: 4px; font-size: 9px; color: #555; font-weight: bold; transition: all 0.06s;}
@@ -51,9 +63,12 @@
     .black-key.active { background: linear-gradient(137deg, #2ac7ec 0%, #76e2ff 100%); color: #1d8a95;}
     .black-key:active { background: linear-gradient(137deg, #b3e5fc 0%, #2ac7ec 100%);}
     .created-by-footer { text-align: center; color: #fff; font-size: 15px; opacity: 0.91; margin: 28px auto 14px auto; width: 100%; }
+    /* Thanh cuộn lăn tay nổi bật */
+    .piano-container::-webkit-scrollbar { height: 12px; background: #ccc; border-radius: 8px;}
+    .piano-container::-webkit-scrollbar-thumb { background: #667eea; border-radius: 8px;}
+    /* Hiệu ứng kéo bàn phím bằng chuột/thanh cuộn */
     @media (max-width: 2400px){
       .piano { width:2392px; max-width:98vw;}
-      .piano-container{max-width:99vw;}
     }
     @media (max-width: 1900px){
       .piano { width:1910px;}
@@ -77,12 +92,6 @@
       .container{padding:6px 0;}
       .piano-container{padding:1px;}
     }
-    .scroll-piano {
-      overflow-x: auto;
-      overflow-y: visible;
-      max-width: 100%;
-      max-height: 210px;
-    }
   </style>
 </head>
 <body>
@@ -93,25 +102,23 @@
       </button>
       <span class="sound-status" id="soundStatus">Tắt âm</span>
     </div>
-    <h1>🎹 Đàn Piano 72 phím (bắt đầu từ C0)</h1>
+    <h1>🎹 Đàn Piano 72 phím (kéo bàn phím ngang cực mượt)</h1>
     <div class="record-controls">
       <button class="rec-btn" id="recordBtn"><span id="recIcon">⏺️</span> Ghi âm</button>
       <button class="play-btn" id="playBtn" disabled><span id="playIcon">▶️</span> Phát lại</button>
-      <button class="download-btn" id="downloadBtn" disabled><span id="downIcon">💾</span> Tải về</button>
-      <button class="download-btn" id="downloadMidiBtn" disabled><span id="midiIcon">🎹</span> Tải MIDI</button>
+      <button class="download-btn" id="downloadBtn" disabled><span id="downIcon">💾</span> Tải JSON</button>
       <button class="clear-btn" id="clearBtn" disabled><span id="clearIcon">🗑️</span> Xóa</button>
       <span class="record-status" id="recordStatus">Chưa ghi âm</span>
       <span class="play-remaining" id="playRemaining"></span>
     </div>
     <div class="loading-status" id="loadingStatus">⏳ Đang tải Piano...</div>
     <div id="alert"></div>
-    <div class="piano-container scroll-piano">
+    <div class="piano-container" id="pianoScrollX">
       <div class="piano" id="piano"></div>
     </div>
   </div>
   <div class="created-by-footer">Created by Minh Nhựt</div>
   <script>
-    // Danh sách phím trắng từ C0, layout thực tế 72 phím
     const WHITE_NOTES = [
       "C0","D0","E0","F0","G0","A0","B0",
       "C1","D1","E1","F1","G1","A1","B1",
@@ -121,8 +128,7 @@
       "C5","D5","E5","F5","G5","A5","B5",
       "C6","D6","E6","F6","G6","A6","B6",
       "C7","D7","E7","F7","G7","A7","B7"
-    ]; // 49 trắng
-    // Phím đen - đúng vị trí, bắt đầu từ C#0
+    ];
     const BLACK_NOTES_LAYOUT = [
       {note:"C#0",pos:"C0"}, {note:"D#0",pos:"D0"},
       {note:"F#0",pos:"F0"}, {note:"G#0",pos:"G0"}, {note:"A#0",pos:"A0"},
@@ -140,7 +146,7 @@
       {note:"F#6",pos:"F6"}, {note:"G#6",pos:"G6"}, {note:"A#6",pos:"A6"},
       {note:"C#7",pos:"C7"}, {note:"D#7",pos:"D7"},
       {note:"F#7",pos:"F7"}, {note:"G#7",pos:"G7"}, {note:"A#7",pos:"A7"},
-    ]; // 40 đen (tổng số phím = 89, tuy nhiên trên piano 72 phím sẽ hiển thị 72 phím đúng layout, những phím đen cuối cùng ở B7 có thể bỏ qua)
+    ];
     const whiteKeyWidth = 33, blackKeyWidth = 22;
     let whiteKeyPosX = {};
     WHITE_NOTES.forEach((note,i)=>{whiteKeyPosX[note]=i*whiteKeyWidth;});
@@ -152,7 +158,7 @@
       }
       return noteMidi(a)-noteMidi(b);
     });
-    // Tính tần số
+    // Tần số
     const notesFreq = {};
     pianoNotesAll.forEach(function(note){
       const ORDER = {"C":0,"C#":1,"D":2,"D#":3,"E":4,"F":5,"F#":6,"G":7,"G#":8,"A":9,"A#":10,"B":11};
@@ -160,11 +166,8 @@
       let midi = 12*(parseInt(m[2])+1)+ORDER[m[1]];
       notesFreq[note]=440 * Math.pow(2, (midi-69)/12);
     });
-    // Chỉ tiếng piano thật
-    const sampleInstrument = {
-      name: '🎹 Acoustic Grand Piano',
-      folder: 'acoustic_grand_piano-mp3'
-    };
+    // Piano thật
+    const sampleInstrument = { name: '🎹 Acoustic Grand Piano', folder: 'acoustic_grand_piano-mp3' };
     const sampleBaseURL = "https://raw.githubusercontent.com/Nhut11790/nhut11790.github.io/main/tieng/";
     let audioContext = null;
     let isMuted = true, isAudioActivated = false;
@@ -186,8 +189,7 @@
     function convertSharpToFlat(note) {
       const sharpToFlat = { 'C#': 'Db', 'D#': 'Eb', 'F#': 'Gb', 'G#': 'Ab', 'A#': 'Bb' };
       for (let sharp in sharpToFlat) {
-        if (note.startsWith(sharp))
-          return note.replace(sharp, sharpToFlat[sharp]);
+        if (note.startsWith(sharp)) return note.replace(sharp, sharpToFlat[sharp]);
       }
       return note;
     }
@@ -204,8 +206,7 @@
           .then(res => res.ok ? res.arrayBuffer() : null)
           .then(buf => buf ? audioContext.decodeAudioData(buf) : null)
           .then(audioBuf => { 
-            if(audioBuf) {
-              sampleBuffers[note] = audioBuf; successCount++;
+            if(audioBuf) { sampleBuffers[note] = audioBuf; successCount++;
               document.getElementById('loadingStatus').textContent = `⏳ Đang tải Piano... (${successCount}/${notesList.length})`;
             }
           }).catch(()=>{});
@@ -370,7 +371,6 @@
       playBtn.disabled = noteRecords.length===0 || active;
       downloadBtn.disabled = noteRecords.length===0 || active;
       clearBtn.disabled = noteRecords.length===0 || active;
-      downloadMidiBtn.disabled = noteRecords.length===0 || active;
     }
     function setPlaybackUI(active) {
       playBtn.classList.toggle('active', active);
@@ -378,7 +378,6 @@
       recordBtn.disabled = active;
       downloadBtn.disabled = noteRecords.length===0 || active;
       clearBtn.disabled = noteRecords.length===0 || active;
-      downloadMidiBtn.disabled = noteRecords.length===0 || active;
       recordStatus.textContent = active ? "Đang phát lại..." : noteRecords.length>0 ? `Đã ghi ${noteRecords.length} nốt` : "Chưa ghi âm";
       playBtn.disabled = noteRecords.length===0;
     }
@@ -390,7 +389,6 @@
       playBtn.disabled = noteRecords.length===0 || isRecording;
       downloadBtn.disabled = noteRecords.length===0 || isRecording;
       clearBtn.disabled = noteRecords.length===0 || isRecording;
-      downloadMidiBtn.disabled = noteRecords.length===0 || isRecording;
     }
     function downloadRecord() {
       if (noteRecords.length===0) return;
@@ -416,10 +414,9 @@
     const recordBtn = document.getElementById('recordBtn');
     const playBtn = document.getElementById('playBtn');
     const downloadBtn = document.getElementById('downloadBtn');
-    const downloadMidiBtn = document.getElementById('downloadMidiBtn');
     const recordStatus = document.getElementById('recordStatus');
     const clearBtn = document.getElementById('clearBtn');
-    playBtn.disabled = true; downloadBtn.disabled = true; clearBtn.disabled = true; downloadMidiBtn.disabled = true;
+    playBtn.disabled = true; downloadBtn.disabled = true; clearBtn.disabled = true;
     recordBtn.addEventListener('click', ()=>{
       if (isPlayingBack) return;
       if (!isRecording) {
@@ -435,75 +432,6 @@
     });
     downloadBtn.addEventListener('click', downloadRecord);
     clearBtn.addEventListener('click', ()=>{clearRecord();});
-
-    // MIDI EXPORT
-    function noteToMidiNumber(note) {
-      const table = {'C':0,'C#':1,'D':2,'D#':3,'E':4,'F':5,'F#':6,'G':7,'G#':8,'A':9,'A#':10,'B':11};
-      let m = note.match(/^([A-G]#?)(\d)$/);
-      if(!m) return 60;
-      return table[m[1]] + (parseInt(m[2]) + 1) * 12;
-    }
-    function makeMidiFile(notes) {
-      function writeInt(v, n) {
-        let out = [];
-        for(let i=n-1;i>=0;i--) out.push((v>>(i*8))&0xFF);
-        return out;
-      }
-      function writeVarLen(v) {
-        let bytes = [];
-        let buffer = v & 0x7F;
-        while ((v >>= 7)) {
-          buffer <<= 8;
-          buffer |= ((v & 0x7F) | 0x80);
-        }
-        while (true) {
-          bytes.push(buffer & 0xFF);
-          if (buffer & 0x80) buffer >>= 8;
-          else break;
-        }
-        return bytes;
-      }
-      let midi = [];
-      midi.push(...[77,84,104,100]);
-      midi.push(...writeInt(6,4));
-      midi.push(...writeInt(1,2));
-      midi.push(...writeInt(1,2));
-      midi.push(...writeInt(480,2));
-      let events = [];
-      let ticksPerBeat = 480;
-      let tempo = 500000;
-      events.push(...[0x00, 0xFF, 0x51, 0x03,(tempo>>16)&0xFF,(tempo>>8)&0xFF,tempo&0xFF]);
-      let lastTick = 0;
-      for(let i=0;i<notes.length;i++) {
-        let {note, ts} = notes[i];
-        let midiNum = noteToMidiNumber(note);
-        let currTick = Math.round(ts * ticksPerBeat / 500);
-        let dt = currTick-lastTick;
-        lastTick = currTick;
-        events.push(...writeVarLen(dt));
-        events.push(0x90, midiNum, 90);
-        events.push(...writeVarLen(Math.round(0.4 * ticksPerBeat)));
-        events.push(0x80, midiNum, 64);
-        lastTick += Math.round(0.4 * ticksPerBeat);
-      }
-      events.push(0x00, 0xFF, 0x2F, 0x00);
-      midi.push(...[77,84,114,107]);
-      midi.push(...writeInt(events.length,4));
-      midi.push(...events);
-      return new Uint8Array(midi);
-    }
-    downloadMidiBtn.addEventListener('click', function() {
-      if (noteRecords.length === 0) return;
-      let midiData = makeMidiFile(noteRecords);
-      let blob = new Blob([midiData],{type:"audio/midi"});
-      let url = URL.createObjectURL(blob);
-      let a = document.createElement('a');
-      a.href = url;
-      a.download = "piano-record-"+Date.now()+".mid";
-      document.body.appendChild(a); a.click(); document.body.removeChild(a);
-      setTimeout(()=>{URL.revokeObjectURL(url)},1300);
-    });
-
     // Âm thanh: bật/tắt
     const soundToggle = document.getElementById('soundToggle');
     const soundIcon = document.getElementById('soundIcon');
@@ -556,6 +484,39 @@
           soundStatus.textContent = 'Âm thanh bật';
         }
       }
+    });
+    // === Kéo bàn phím bằng chuột (desktop) hoặc chạm swipe ngang (mobile)
+    const pianoScrollDiv = document.getElementById('pianoScrollX');
+    let isMouseDown = false, lastX = 0, scrollStart = 0;
+    // Desktop drag-scroll
+    pianoScrollDiv.addEventListener('mousedown', e => {
+      isMouseDown = true;
+      lastX = e.pageX;
+      scrollStart = pianoScrollDiv.scrollLeft;
+      pianoScrollDiv.style.cursor = "grabbing";
+      e.preventDefault();
+    });
+    document.addEventListener('mousemove', e => {
+      if (isMouseDown) {
+        let dx = e.pageX - lastX;
+        pianoScrollDiv.scrollLeft = scrollStart - dx;
+      }
+    });
+    document.addEventListener('mouseup', e => {
+      if (isMouseDown) {
+        isMouseDown = false;
+        pianoScrollDiv.style.cursor = "";
+      }
+    });
+    // Mobile - swipe scroll
+    let touchStartX = 0, touchScrollLeft = 0;
+    pianoScrollDiv.addEventListener('touchstart', function(e){
+      touchStartX = e.touches[0].pageX;
+      touchScrollLeft = pianoScrollDiv.scrollLeft;
+    });
+    pianoScrollDiv.addEventListener('touchmove', function(e){
+      const dx = e.touches[0].pageX - touchStartX;
+      pianoScrollDiv.scrollLeft = touchScrollLeft - dx;
     });
     window.addEventListener('load', async () => {
       initAudioContext();
